css/discover.css
.fa-youtube-play{
    color: red;
    font-size: 1.3em;
}

p.list-group-item-text {
    font-style: italic;
}

span.label-default{
    font-size: 0.9em;
    min-width: 40%;
    text-align: center;
}

div.youtube-vid > iframe {
    display: block;
    width: 100%;
    height: 50%;
    border: none;
}

ul.modal-ul > li {
    font-size: 16;
}

textarea {
    display: block;
    width: 100%;
    border: solid 2px;
    resize: none;
}

.timeDeets {
    display: inline;
    width: 20%;
    border: solid 2px;
}

.timeDiv {
    margin-top: 10px;
    margin-bottom: 10px;
}

.timeDrop {
    display: inline;
    width: 35%;
    border: solid 2px;
    margin-left: 5px;
}

.distractionDiv {
    margin-top: 10px;
    margin-bottom: 10px;
}

.distractionDrop{
    border: solid 2px;
}

.exerciseNameInput {
    border: solid 2px;
}

.textBoxDeets {
    border: solid 2px;
}

.youtubeLinkInput {
    border: solid 2px;
}

.equipmentInput {
    border: solid 2px;
}
#repeatInterval {
    display: inline;
    width: 30%;
    border: solid 2px;
}
#repeatTimeUnit {
    display: inline;
    width: 45%;
    border: solid 2px;
    margin-left: 5px;
}
#startTime {
    display: inline;
    width: 75%;
    border: solid 2px;
}

